[package]
name = "rtc-srtp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "RTC SRTP in Rust"
license.workspace = true
documentation = "https://docs.rs/rtc-srtp"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
openssl = ["dep:openssl"]
vendored-openssl = ["openssl/vendored"]

[dependencies]
shared = { workspace = true, default-features = false, features = ["crypto", "marshal", "replay"] }
rtp.workspace = true
rtcp.workspace = true

byteorder.workspace = true
bytes.workspace = true
ring.workspace = true
ctr = "0.9.2"
aes = "0.8.4"
openssl = { version = "0.10.72", optional = true }

[dev-dependencies]
criterion.workspace = true
lazy_static = "1.4.0"

[[bench]]
name = "bench"
harness = false